MDEV-20500: Bad error msg on disabling local infile