sql/sql_parse.cc
@@ -4940,8 +4940,9 @@ mysql_execute_command(THD *thd)
       if (!(thd->client_capabilities & CLIENT_LOCAL_FILES) ||
           !opt_local_infile)
       {
-	my_message(ER_NOT_ALLOWED_COMMAND, ER_THD(thd, ER_NOT_ALLOWED_COMMAND), MYF(0));
-	goto error;
+        my_message(ER_LOAD_INFILE_CAPABILITY_DISABLED, 
+                   ER_THD(thd, ER_LOAD_INFILE_CAPABILITY_DISABLED), MYF(0));
+        goto error;
       }
     }
 
